css/style.css
/* ... */
.media__image {
  margin-top: 1rem;
}
/*quote*/

.quote {
  font-size: 3rem;
  font-style: italic;
  color: var(--color-body-darker);
  line-height: 1.3;
}
.quote__text::before {
  content: open-quote;
}
.quote__text::after {
  content: close-quote;
}
.quote__author {
  font-size: 3rem;
  font-weight: 500;
  font-style: normal;
}

.quote__organization {
  color: var(--color-heading);
  font-size: 2rem;
  opacity: 0.4;
  font-style: normal;
}
.quote__line {
  position: relative;
  bottom: 20px;
}
@media screen and (min-width: 1024px) {
  .quote {
    font-size: 2rem;
  }
  .quote__author {
    font-size: 2.4rem;
  }
  .quote__organization {
    font-size: 1.6rem;
  }
}
/*testimonial (card-img-icon-quote)*/
.testimonial {
  padding: 3rem;
}
.testimonial__image {
  position: relative;
}
.testimonial__image > img {
  width: 100%;
}
.testimonial__image > .icon-container {
  position: absolute;
  top: 3rem;
  right: -50px;
}
.grid {
  display: grid;
}
@media screen and (min-width: 1024px) {
  .grid--1x2 {
    grid-template-columns: repeat(2, 1fr);
  }
}
.quote__testimonial {
  padding: 8rem;
}

/*callouts*/

.callout {
  padding: 4rem;
  /*border-radius: 5px;*/
}
.callout--primary {
  background: var(--color-callout-primary);
  color: #fff;
}
.callout__heading {
  color: #fff;
  margin-top: 0;
  font-size: 3rem;
}
.callout .btn {
  justify-self: center; /* for grid use justify-self instead of justify-content */
  align-self: center; /* for grid use align-self instead of align-item */
}
.callout__content {
  text-align: center;
}
@media screen and (min-width: 768px) {
  .callout .grid--1x2 {
    grid-template-columns: 2fr 1fr;
  }
  .callout__content {
    text-align: left;
  }
  .callout .btn {
    justify-self: start;
  }
}

/*collapsible*/
.collapsible__header {
  display: flex;
  justify-content: space-between;
}
.collapsible__heading {
  margin-top: 0;
  font-size: 3rem;
}
.collapsible__content {
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  transition: all 0.8s;
}
.collapsible__chevron {
  transform: rotate(-90deg);
  transition: transform 0.8s;
}
.collapsible--expanded .collapsible__chevron {
  transform: rotate(0);
}
.collapsible--expanded .collapsible__content {
  max-height: 100vh;
  opacity: 1;
}

/*Block*/

.block {
  padding: 6rem 2rem;
  background: white;
}
.block__header {
  text-align: center;
  margin-top: 12rem;
  margin-bottom: 5rem;
}
.block__heading {
  margin-top: 0;
}
.block--dark {
  margin-top: 15px;
  background: rgb(1, 28, 2);
  color: white;
}
.block--dark h1,
.block--dark h2,
.block--dark h3 {
  color: white;
}
.block--dark .block__heading {
  color: rgb(250, 245, 245);
}
.container {
  /* to fill the entire content in 1180px and extra space equal distribution both the side (left & right)*/
  max-width: 1180px;
  margin: 0 auto;
}

/*hero*/
.hero__tagline {
  font-size: 3rem;
  color: #b9c3cf;
  letter-spacing: 1px;
  margin-top: 3rem;
  margin-bottom: 5rem;
}
.hero__image {
  width: 100%;
}
@media screen and (min-width: 768px) {
  .hero__content {
    text-align: left;
    align-self: center;
  }
}
.donain__container {
  width: 100%;
}
/*domain block*/
.block-domain .input-group {
  box-shadow: 0 0 30px 20px #e6ebee;
  border: 0;
  margin: 4rem auto;
  max-width: 700px;
}

.block-domain__prices {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 6rem);
  font-size: 2.5rem;
  font-weight: 100;
  max-width: 1000px;
  margin: 5rem auto;
}
.block-domain__prices .lable--secondary {
  font-size: 2.5rem;
  font-weight: 100;
}
@media screen and (min-width: 768px) {
  .block-domain__prices {
    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
  }
}

/*block plans*/
.block-plans .grid {
  gap: 8rem 4rem;
}

.block-plans .card {
  max-width: 300px;
  margin: 0 auto;
}

@media screen and (min-width: 768px) {
  .block-plans .grid--1x3 {
    grid-template-columns: repeat(3, 1fr);
  }
}

/*feature*/
.feature {
  gap: 4rem;
  margin: 4rem;
}

.feature__heading {
  margin: 1rem 0;
}
.feature__image {
  width: 100%;
}
.container .feature__content {
  align-items: center;
}
.block__header-feature {
  text-align: center;
  margin-top: 3rem;
  margin-bottom: 10rem;
}
.block__header-feature .feature__paragraph {
  font-size: 8rem;
}

@media screen and (min-width: 768px) {
  .feature:nth-of-type(even) .feature__content {
    order: 2;
  }
}

/*showcase*/

.ipad__image {
  width: 100%;
}
.ipad__details {
  justify-self: center;
  align-self: center;
  font-weight: 40;
  letter-spacing: 10px;
}
.block--dark .list {
  list-style: none;
  padding-left: 0;
  font-size: 2rem;
  font-weight: 500;
  letter-spacing: 4px;
}
.block--dark h3 {
  margin-bottom: 2rem;
}
.block--dark .media {
  margin-bottom: 4rem;
}

/*footer*/
.footer {
  margin-top: 20%;
}
.footer_details {
  padding-left: 22%;

  display: flex;
  text-wrap: nowrap;
}
.footer_details h5 {
  padding: 3rem;
  color: #000000;
  font-size: 1.8rem;
  letter-spacing: 1rem;
}
.footer_details h5:hover {
  color: #066408;
  letter-spacing: 1.8rem;
  transition: 0.5s;
}
.monogram {
  scale: 0.6;
  padding-left: 33.33%;
}

.monogram img {
  max-width: 576px;
  height: auto;
}

.footer_branding p {
  text-align: center;
  font-size: 1.8rem;
  letter-spacing: 1rem;
}

.footer_contacthouse h4 {
  text-align: center;
  font-size: 2.5rem;
  letter-spacing: 1.3rem;
  text-wrap: nowrap;
  margin-bottom: 10%;
}
.contact_modes {
  padding-left: 10%;
  padding-right: 10%;
  display: flex;
  text-align: center;
}
.contact_modes h5 {
  font-size: 1.8rem;
  letter-spacing: 1rem;
}
.house_phone {
  margin-left: 12%;
  text-wrap: nowrap;
}
.house_text {
  margin-left: 12%;
  text-wrap: nowrap;
}
.house_email {
  margin-left: 12%;
  text-wrap: nowrap;
}
.house_phone p {
  font-size: 1.3rem;
  letter-spacing: 0.5rem;
}
.house_text p {
  font-size: 1.3rem;
  letter-spacing: 0.5rem;
}
.house_email p {
  font-size: 1.3rem;
  letter-spacing: 0.5rem;
}
/* ... */

